# iic

./: README.md  pyproject.toml
src/ic/curves/: __init__.py  _curves.py  weight.py
